<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_rounded_white"
            android:gravity="center"
            android:minWidth="100dp"
            android:orientation="vertical"
            android:paddingTop="15dp"
            android:paddingBottom="13dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/text_black"
                android:textSize="26sp"
                tools:text="9.5" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/distance_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/Mile"
                android:textColor="#939393"
                android:textSize="14sp" />

        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_rounded_white"
            android:gravity="center"
            android:minWidth="100dp"
            android:orientation="vertical"
            android:paddingTop="15dp"
            android:paddingBottom="13dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/av_pace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/text_black"
                android:textSize="26sp"
                tools:text="5:30" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/avg_pace"
                android:textColor="#939393"
                android:textSize="14sp" />

        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_rounded_white"
            android:gravity="center"
            android:minWidth="100dp"
            android:orientation="vertical"
            android:paddingTop="15dp"
            android:paddingBottom="13dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/text_black"
                android:textSize="26sp"
                app:autoSizeMaxTextSize="26sp"
                android:maxLines="1"
                android:singleLine="true"
                tools:text="55:30" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/time"
                android:textColor="#939393"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_weight="1"
        android:background="@drawable/bg_top_rounded_white"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/current_data"
            android:textColor="@color/text_black"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/current_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/roboto_bold"
            android:textColor="@color/text_black"
            android:textSize="60sp"
            tools:text="6:78" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/distance_type_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/Mile"
            android:textColor="#939393"
            android:textSize="14sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_rounded_white"
                android:gravity="center"
                android:minWidth="100dp"
                android:orientation="vertical"
                android:paddingTop="15dp"
                android:paddingBottom="13dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/current_pace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:textColor="@color/text_black"
                    android:textSize="26sp"
                    tools:text="9.5" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/current_pace"
                    android:textColor="#939393"
                    android:textSize="14sp" />

            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_rounded_white"
                android:gravity="center"
                android:minWidth="100dp"
                android:orientation="vertical"
                android:paddingTop="15dp"
                android:paddingBottom="13dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/current_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:textColor="@color/text_black"
                    android:textSize="26sp"
                    tools:text="5:30" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/time"
                    android:textColor="#939393"
                    android:textSize="14sp" />

            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_rounded_white"
                android:gravity="center"
                android:minWidth="100dp"
                android:orientation="vertical"
                android:paddingTop="15dp"
                android:paddingBottom="13dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/current_avg_pace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:textColor="@color/text_black"
                    android:textSize="26sp"
                    tools:text="55:30" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/avg_pace"
                    android:textColor="#939393"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>